Enhance cinemustAcceuil.html with fonts and image
Added Google Fonts integration and an image to the homepage.

--- a/cinemustAcceuil.html
+++ b/cinemustAcceuil.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cinemust</title>
     <link rel="stylesheet" href="cinemustAcceuil.css">
+    <!-- Intégration police -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Bienvenue sur notre site</h1>
+     <h1 id="titre-principal">Bienvenue sur notre site</h1>
+     <img src="images/capture.155.jpg" alt="Description de l'image" class="image-responsive">
 </body>
 </html>
