--- a/cinemustAcceuil.html
+++ b/cinemustAcceuil.html
@@ -11,7 +11,17 @@
         <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-     <h1 id="titre-principal">Bienvenue sur notre site</h1>
-     <img src="images/capture.155.jpg" alt="Description de l'image" class="image-responsive">
+    <h1 id="titre-principal">Bienvenue sur notre site</h1>
+    <img id="image-responsive" src="images/Capture.155.png" alt="Description de l'image">
+
+    <div id="text-box-1">
+        <h2>Titre de la section</h2>
+        <p>Votre texte ici...</p>
+    </div>
+
+    <div id="text-box-2">
+        <h2>Une autre section</h2>
+        <p>Un autre texte ici...</p>
+    </div>
 </body>
 </html>
