Fix image source and ID in cinemustAcceuil.html
Updated image source and added an ID for the secondary image.

--- a/cinemustAcceuil.html
+++ b/cinemustAcceuil.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1 id="titre-principal">Bienvenue Mordu de Films</h1>
-    <img id="image-responsive" src="images/Capture.155.png" alt="Description de l'image">
+    <img src="Capture.155.PNG" alt="Description de l'image" id="image-secondaire">
 
     <div id="text-box-1">
         <h2>A propos de nous</h2>
