Modify search form action and improve accessibility
Updated the search form to submit to results.html and added aria-label for accessibility.

--- a/cinemustAcceuil.html
+++ b/cinemustAcceuil.html
@@ -1,68 +1,67 @@
-<!DOCTYPE html> <!-- # indique que c'est un document HTML5 -->
-<html lang="fr" class="scroll"> <!-- # langue = français, classe "scroll" pour appliquer du style CSS si besoin -->
+<!DOCTYPE html> <!-- # C'est un document HTML5 -->
+<html lang="fr" class="scroll"> <!-- # Langue = français, "scroll" peut servir pour le style -->
 <head> 
-    <meta charset="UTF-8"> <!-- # encode les caractères spéciaux et accents correctement -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- # rend la page responsive (adaptée aux mobiles) -->
-    <title>cinemust</title> <!-- # titre de la page affiché dans l'onglet du navigateur -->
-    <link rel="stylesheet" href="cinemustAcceuil.css"> <!-- # lien vers le fichier CSS externe pour la mise en page -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- # préparation de la connexion à Google Fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- # optimisation pour charger les polices Google plus vite -->
-    <!-- Police uniforme et élégante -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Lato:wght@400;700&display=swap" rel="stylesheet"> <!-- # importe les polices Montserrat et Lato depuis Google Fonts -->
+    <meta charset="UTF-8"> <!-- # Permet d’afficher les accents et caractères spéciaux -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- # Page adaptée aux mobiles et tablettes -->
+    <title>cinemust</title> <!-- # Titre de la page dans l’onglet du navigateur -->
+    <link rel="stylesheet" href="cinemustAcceuil.css"> <!-- # Lie le fichier CSS pour le style -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- # Prépare le chargement des polices Google -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- # Optimise le chargement des polices -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Lato:wght@400;700&display=swap" rel="stylesheet"> <!-- # Importe les polices Montserrat et Lato -->
 
     <style>
       body{
-        font-family: 'Lato', sans-serif; /* # police principale du site pour le texte courant */
+        font-family: 'Lato', sans-serif; /* # Police principale pour le texte */
       }
       #titre-principal{
-        font-family: 'Montserrat', sans-serif; /* # police du titre plus stylée */
-        font-size: 48px; /* # taille du titre principal */
-        font-weight: 900; /* # gras très prononcé pour le titre */
-        letter-spacing: 1px; /* # espace entre les lettres du titre */
+        font-family: 'Montserrat', sans-serif; /* # Police du titre */
+        font-size: 48px; /* # Taille du titre */
+        font-weight: 900; /* # Gras prononcé */
+        letter-spacing: 1px; /* # Espace entre les lettres */
       }
       h2{
-        font-family: 'Montserrat', sans-serif; /* # police des sous-titres */
-        font-weight: 700; /* # sous-titres un peu gras */
+        font-family: 'Montserrat', sans-serif; /* # Police pour les sous-titres */
+        font-weight: 700; /* # Sous-titres légèrement gras */
       }
     </style>
 </head>
 <body> 
-    <h1 id="titre-principal">Bienvenue aux mordus de films</h1> <!-- # titre principal affiché en grand sur la page -->
+    <h1 id="titre-principal">Bienvenue aux mordus de films</h1> <!-- # Titre principal affiché sur la page -->
 
-    <img src="Capture.155.PNG" alt="Description de l'image" id="image-responsive"> <!-- # image placée en haut à droite (petite illustration) -->
+    <img src="Capture.155.PNG" alt="Description de l'image" id="image-responsive"> <!-- # Image en haut à droite -->
 
-   <form> <!-- # formulaire pour la barre de recherche -->
-    <div> <!-- # conteneur pour aligner la barre et le bouton -->
-      <input type="search" id="maRecherche" name="q" placeholder="Quel film voudrais-tu rechercher ?" /> <!-- # champ de recherche avec texte guide -->
-      <button type="submit">🔍</button> <!-- # bouton pour lancer la recherche -->
+   <form action="results.html" method="get"> <!-- # Formulaire pour rechercher un film, envoie vers results.html -->
+    <div> <!-- # Conteneur pour aligner la barre et le bouton -->
+      <input type="search" id="maRecherche" name="q" placeholder="Quel film voudrais-tu rechercher ?" /> <!-- # Barre de recherche avec texte guide -->
+      <button id="search-button" type="submit" aria-label="Rechercher">🔍</button> <!-- # Bouton pour lancer la recherche -->
     </div>
    </form>
 
-    <div id="text-box-1"> <!-- # première boîte de texte -->
-        <h2>A propos de nous</h2> <!-- # titre cliquable pour montrer/cacher le texte -->
-        <p>Passion ciné, partage de films et souvenirs.</p> <!-- # texte caché par défaut et affiché au clic -->
+    <div id="text-box-1"> <!-- # Première boîte de texte -->
+        <h2>A propos de nous</h2> <!-- # Titre cliquable -->
+        <p>Passion ciné, partage de films et souvenirs.</p> <!-- # Texte affiché au clic -->
     </div>
 
-    <div id="text-box-2"> <!-- # deuxième boîte de texte -->
-        <h2>Introduction</h2> <!-- # titre cliquable -->
-        <p>Revivez l'histoire du cinéma et partagez vos coups de cœur.</p> <!-- # texte qui s'affiche quand le titre est cliqué -->
+    <div id="text-box-2"> <!-- # Deuxième boîte de texte -->
+        <h2>Introduction</h2> <!-- # Titre cliquable -->
+        <p>Revivez l'histoire du cinéma et partagez vos coups de cœur.</p> <!-- # Texte affiché au clic -->
     </div>
 
-    <script> <!-- # script pour rendre les titres cliquables et accessibles clavier -->
+    <script> <!-- # Script pour ouvrir/fermer les textes des boîtes -->
     (function(){
-      const headings = document.querySelectorAll('#text-box-1 h2, #text-box-2 h2'); // # récupère tous les h2 dans les boîtes
+      const headings = document.querySelectorAll('#text-box-1 h2, #text-box-2 h2'); // # Récupère tous les titres h2
       function toggle(h){
-        const parent = h.parentElement; // # récupère la boîte parente du titre
-        const open = parent.classList.toggle('open'); // # ajoute/enlève la classe "open" pour afficher/masquer le texte
-        h.setAttribute('aria-expanded', open); // # met à jour l'attribut pour l'accessibilité
+        const parent = h.parentElement; // # Boîte parente du titre
+        const open = parent.classList.toggle('open'); // # Ajoute ou enlève la classe "open" pour afficher/masquer le texte
+        h.setAttribute('aria-expanded', open); // # Met à jour l'état pour l’accessibilité
       }
       headings.forEach(h => {
-        h.setAttribute('tabindex','0'); // # rend le titre focusable au clavier
-        h.setAttribute('role','button'); // # indique que le titre se comporte comme un bouton
-        h.setAttribute('aria-expanded','false'); // # état initial = fermé
-        h.addEventListener('click', ()=> toggle(h)); // # clique pour ouvrir/fermer le texte
+        h.setAttribute('tabindex','0'); // # Rend le titre sélectionnable au clavier
+        h.setAttribute('role','button'); // # Indique que le titre se comporte comme un bouton
+        h.setAttribute('aria-expanded','false'); // # État initial = fermé
+        h.addEventListener('click', ()=> toggle(h)); // # Ouvre/ferme au clic
         h.addEventListener('keydown', e => {
-          if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); toggle(h); } // # ouverture/fermeture avec Entrée ou Espace
+          if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); toggle(h); } // # Ouvre/ferme avec Entrée ou Espace
         });
       });
     })();
