--- a/cinemustAcceuil.html
+++ b/cinemustAcceuil.html
@@ -10,19 +10,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Lato:wght@400;700&display=swap" rel="stylesheet"> <!-- # Importe les polices Montserrat et Lato -->
 
     <style>
-      body{
-        font-family: 'Lato', sans-serif; /* # Police principale pour le texte */
-      }
-      #titre-principal{
-        font-family: 'Montserrat', sans-serif; /* # Police du titre */
-        font-size: 48px; /* # Taille du titre */
-        font-weight: 900; /* # Gras prononcé */
-        letter-spacing: 1px; /* # Espace entre les lettres */
-      }
-      h2{
-        font-family: 'Montserrat', sans-serif; /* # Police pour les sous-titres */
-        font-weight: 700; /* # Sous-titres légèrement gras */
-      }
+  body{
+    font-family: 'Lato', sans-serif;
+  }
+  #titre-principal{
+    font-family: "Cinzel Decorative", serif;
+  }
+  h2{
+    font-family: 'Montserrat', sans-serif;
+  }
     </style>
 </head>
 <body> 
@@ -37,15 +33,17 @@
     </div>
    </form>
 
-    <div id="text-box-1" class="close"> <!-- # Première boîte ouverte par défaut -->
+   <div id="boxes-container">
+    <div id="text-box-1" class="close">
         <h2 aria-expanded="true">A propos de nous</h2>
         <p>Passion ciné, partage de films et souvenirs.</p>
     </div>
 
-    <div id="text-box-2" class="close"> <!-- # Deuxième boîte ouverte par défaut -->
+    <div id="text-box-2" class="close">
         <h2 aria-expanded="true">Introduction</h2>
         <p>Revivez l'histoire du cinéma et partagez vos coups de cœur.</p>
     </div>
+   </div>
 
 
     <!-- Lier le fichier JS (même dossier) -->
