--- a/cinemustAcceuil.html
+++ b/cinemustAcceuil.html
@@ -48,7 +48,7 @@
 
     <h1 id="titre-principal">Bienvenue aux mordus de films</h1> <!-- # Titre principal affiché sur la page -->
 
-    <form action="results.html" method="get"> <!-- # Formulaire pour rechercher un film, envoie vers results.html -->
+    <form action="cinemustResult.html" method="get"> <!-- # Formulaire pour rechercher un film, envoie vers results.html -->
     <div> <!-- # Conteneur pour aligner la barre et le bouton -->
       <input type="search" id="maRecherche" name="q" placeholder="Quel film voudrais-tu rechercher ?" /> <!-- # Barre de recherche avec texte guide -->
       <button id="search-button" type="submit" aria-label="Rechercher">🔍</button> <!-- # Bouton pour lancer la recherche -->
@@ -70,7 +70,7 @@
    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll/dist/js/splide-extension-auto-scroll.min.js"></script><!-- Auto Scroll Extension -->
     <!-- Lier le fichier JS (même dossier) -->
     <script src="cinemust.js" defer></script>
-    <script>
+        <script>
   new Splide('#slider-films', {
     type: 'loop',
     perPage: 10,
@@ -128,5 +128,29 @@
       makeToggle('link-about','content-about');
     })();
     </script>
+    <script>
+(async () => {
+    const params = new URLSearchParams(window.location.search);
+    const movieTitle = params.get("q"); // récupère le film cherché
+
+    const apiKey = "1a07a3df";
+
+    const response = await fetch(`https://www.omdbapi.com/?t=${movieTitle}&apikey=${apiKey}`);
+    const data = await response.json();
+
+    document.getElementById("title").textContent = data.Title;
+    document.getElementById("poster").src = data.Poster;
+    document.getElementById("year").textContent = "Année : " + data.Year;
+    document.getElementById("plot").textContent = data.Plot;
+})();
+</script>
+  <script>
+    document.getElementById("search-btn").addEventListener("click", () => {
+      const title = document.getElementById("movie-input").value;
+      if(title.trim() !== ""){
+        window.location.href = "result.html?movie=" + encodeURIComponent(title);
+      }
+    });
+  </script>
 </body>
 </html>
