--- a/cinemustResult.html
+++ b/cinemustResult.html
@@ -135,7 +135,7 @@
             makeToggle('link-about','content-about');
         })();
     </script>
-
+    <script src="cinemust.js" defer></script>
     <!-- SCRIPT OMDB -->
     <script>
         (async () => {
