--- a/cinemustAcceuil.html
+++ b/cinemustAcceuil.html
@@ -33,8 +33,6 @@
     <aside id="side-panel" role="dialog" aria-hidden="true" aria-labelledby="side-panel-title">
         <button id="side-panel-close" aria-label="Fermer panneau">×</button>
         <div id="side-panel-content">
-
-
             <h4 id="link-intro" role="button" tabindex="0">Introduction</h4>
             <div id="content-intro" aria-hidden="true">
                 <p>Texte d'introduction — cliquez pour développer/fermer.</p>
@@ -138,5 +136,23 @@
       }
     });
   </script>
+
+  <!-- Footer ajouté ici -->
+  <footer>
+      <p>&copy; 2025 Cinemust. Tous droits réservés.</p>
+      <nav>
+          <a href="https://www.pearltrees.com/s/file/preview/367087076/Chartre%20graphique.pdf?pearlId=755314635" 
+   target="_blank" 
+   rel="noopener noreferrer">
+    Charte graphique 
+</a>|
+<a href="file://srv-dc/ebourak$/Downloads/Cahier%20des%20charge%20sur%20le%20theme%20film.pdf?pearlId=755314635" 
+   target="_blank" 
+   rel="noopener noreferrer">
+    Cahier des charges
+</a>|
+          <a href="#diagramme">diagramme</a> 
+      </nav>
+  </footer>
 </body>
 </html>
