--- a/Projet Films EYLON Nathan/cinemustResult.html
+++ b/Projet Films EYLON Nathan/cinemustResult.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Lato:wght@400;700&family=Cinzel+Decorative&display=swap" rel="stylesheet">
 </head>
 <body>
-  <img id="image-responsive" src="images/logo.png" alt="Logo">
+  <img id="image-responsive" src="Icons/Cinemust.png" alt="Logo">
 
   <button id="menu-dots" aria-label="Ouvrir menu">
     <span id="dot-1"></span>
