--- a/Projet Films EYLON Nathan/cinemustAcceuil.html
+++ b/Projet Films EYLON Nathan/cinemustAcceuil.html
@@ -7,6 +7,8 @@
 
   <!-- CSS principal -->
   <link rel="stylesheet" href="cinemustAcceuil.css">
+  <!-- CSS dédié film -->
+  <link rel="stylesheet" href="cinemustFilm.css">
 
   <!-- Polices Google -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +18,8 @@
   <!-- Splide (slider) CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@3/dist/css/splide.min.css">
 </head>
-<body>
+<!-- ajout de la classe film-page -->
+<body class="film-page">
   <img id="image-responsive" src="Icons/Cinemust.png" alt="Logo">
 
   <button id="menu-dots" aria-label="Ouvrir menu">
