--- a/Projet Films EYLON Nathan/cinemustResult.html
+++ b/Projet Films EYLON Nathan/cinemustResult.html
@@ -40,13 +40,7 @@
 
   <h1 id="titre-principal">Recherche du mordus de films</h1>
 
-  <div id="result-container">
-    <h2 id="movie-title"></h2>
-    <img id="poster" alt="Affiche du film" />
-    <p id="movie-year"></p>
-    <p id="movie-plot"></p>
-    <p id="message"></p>
-  </div>
+  <div id="results"></div>
 
   <footer>
     <p>&copy; 2025 Cinemust. Tous droits réservés.</p>
